<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_full"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:layout_gravity="center">


    <LinearLayout
        style="@style/layout_vertical"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="1"
            android:gravity="center">

                        <ImageView
                            style="@style/layout_wrap"
                            android:src="@drawable/logo" />

                        <LinearLayout
                            style="@style/layout_wrap"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView4"
                                style="@style/layout_full"
                                android:text="@string/title_zhubiao"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@android:color/background_dark"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView6"
                                style="@style/layout_full"
                                android:text="@string/title_fubiao"
                                android:textColor="@android:color/background_dark"
                                android:textStyle="bold" />

                        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_set_shape" />
                <!--

                <Button
                    android:id="@+id/btn_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_refresh"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:tooltipText="@string/app_refresh_tooltip" />
                -->
            </LinearLayout>

        </LinearLayout>


        <TextView
            style="@style/layout_vertical"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:text="@string/title_jianzhang"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- 公司信息 -->
    <LinearLayout
        android:orientation="vertical"
        style="@style/layout_vertical"
        android:layout_weight="2">

                    <LinearLayout
                        android:orientation="horizontal"
                        style="@style/layout_vertical"
                        android:layout_weight="1">

                        <TextView
                            style="@style/layout_horizontal"
                            android:layout_weight="1"
                            android:background="@drawable/shape"
                            android:text="@string/table_01_danwei"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/commpany_name"
                            style="@style/layout_horizontal"
                            android:layout_weight="2"
                            android:background="@drawable/shape"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            />

                        <TextView
                            style="@style/layout_horizontal"
                            android:layout_weight="1"
                            android:background="@drawable/shape"
                            android:text="@string/table_01_bianhao"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/commpany_no"
                            style="@style/layout_horizontal"
                            android:layout_weight="2"
                            android:background="@drawable/shape"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        style="@style/layout_vertical"
                        android:layout_weight="1">

                        <TextView
                            style="@style/layout_horizontal"
                            android:layout_weight="1"
                            android:background="@drawable/shape"
                            android:text="@string/table_01_dizhi"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                             />

                        <TextView
                            android:id="@+id/commpany_address"
                            style="@style/layout_horizontal"
                            android:layout_weight="2"
                            android:background="@drawable/shape"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                             />

                        <TextView
                            style="@style/layout_horizontal"
                            android:layout_weight="1"
                            android:background="@drawable/shape"
                            android:text="@string/table_01_lianxi"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"
                             />

                        <TextView
                            android:id="@+id/commpany_tel"
                            style="@style/layout_horizontal"
                            android:layout_weight="2"
                            android:background="@drawable/shape"
                            android:gravity="center"
                            android:textColor="@android:color/background_dark"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                             />

                    </LinearLayout>

    </LinearLayout>

    <!-- 岗位信息 -->
    <LinearLayout
        android:orientation="vertical"
        style="@style/layout_vertical"
        android:layout_weight="6">
        <!-- 标题 -->
        <LinearLayout
            android:orientation="horizontal"
            style="@style/layout_vertical"
            android:layout_weight="1">

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="2"
                android:background="@drawable/shape"
                android:text="@string/table_02_zhaopinzhiwei"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                />

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/table_02_renshu"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                />

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="2"
                android:background="@drawable/shape"
                android:text="@string/table_02_zhuanyexueli"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                />

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/table_02_nianlin"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                 />

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/table_02_xinbie"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                 />

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="2"
                android:background="@drawable/shape"
                android:gravity="center"
                android:text="@string/table_02_gongzidaiyu"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

            <TextView
                style="@style/layout_horizontal"
                android:layout_weight="3"
                android:background="@drawable/shape"
                android:text="@string/table_02_qita"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                 />

        </LinearLayout>
        <!-- ListView控件-->
        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="5">
            <!--
                   <ListView
                       style="@style/layout_full"
                       android:id="@+id/listView"

                       />

                   -->
                    <ListView
                       android:id="@+id/list"
                    style="@style/layout_full" />

        </LinearLayout>




    </LinearLayout>



    <!--备注  -->


    <TextView
        style="@style/layout_vertical"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:background="@android:color/background_light"
        android:text="      备注 ：请持个人有效证件报名"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


</LinearLayout>
